crates/ic-diagnostic/tests/snapshots/multiline_test__large_multiline_block.snap
---
source: crates/ic-diagnostic/tests/multiline_test.rs
expression: buf3
---
error: large multi-line block
   ┌ test.idl:2:22
   │
 2 │ interface MyInterface {
   ·                      ^^ entire method block
 3 │     void myMethod(
   · 
 4 │         int param1,
   · 
 5 │         string param2
   · 
 6 │     );
   · ^^^^^
   └──
