crates/ic-diagnostic/tests/snapshots/multiline_test__multiline_span.snap
---
source: crates/ic-diagnostic/tests/multiline_test.rs
expression: buf
---
error: method spans multiple lines
   ┌ test.idl:3:11
   │
 2 │ interface MyInterface {
 3 │     void myMethod(
   ·           ^^^^^^^^ this method definition spans multiple lines
 4 │         int param1,
 5 │         string param2
 6 │     );
   · ^
 7 │ }
   └──
