crates/ic-diagnostic/tests/snapshots/multiline_test__multiple_labels_different_lines.snap
---
source: crates/ic-diagnostic/tests/multiline_test.rs
expression: buf2
---
⨯: multiple parameters on different lines
  @ test.idl:4:10

 2 │ interface MyInterface {
 3 │     void myMethod(
 4 │         int param1,
   │          ˆˆˆˆˆˆˆˆˆˆ first parameter
 5 │         string param2
   │          ˆˆˆˆˆˆˆˆˆˆˆˆ second parameter
 6 │     );
 7 │ }
